add html structury

--- a/index.html
+++ b/index.html
@@ -1,13 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Four-card-feature</title>
     <!-- link style.css file -->
-     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
-    
+
+    <!-- FOUR-CARD -->
+    <section class="four-card">
+        <div class="container">
+            <div class="four-card__headline">
+                <p class="four-card__subtitle">Reliable, efficient delivery</p>
+                <h1 class="four-card__title">Powered by Technology</h1>
+                <p class="fout-card__text">Our Artificial Intelligence powered tools use millions of project data points
+                    to ensure that your project is successful</p>
+            </div>
+            <div class="four-card__main">
+                <div class="four-card__item card">
+                    <div class="card-line"></div>
+                    <div class="card-body">
+                        <h3 class="card-name">Supervisor</h3>
+                        <p class="card-desc">Monitors activity to identify project roadblocks</p>
+                    </div>
+                    <img src="./img/search.svg" alt="Search icon" class="four-card__icon">
+                </div>
+                <div class="fout-card__content">
+                    <div class="four-card__item card">
+                        <div class="card-line"></div>
+                        <div class="card-body">
+                            <h3 class="card-name">Team Builder</h3>
+                            <p class="card-desc">Scans our talent network to create the optimal team for your project</p>
+                        </div>
+                        <img src="./img/home.svg" alt="Home icon" class="four-card__icon">
+                    </div>
+                    <div class="four-card__item card">
+                        <div class="card-line"></div>
+                        <div class="card-body">
+                            <h3 class="card-name">Karma</h3>
+                            <p class="card-desc">Regularly evaluates our talent to ensure quality</p>
+                        </div>
+                        <img src="./img/lamp.svg" alt="Lamp icon" class="four-card__icon">
+                    </div>
+                </div>
+                <div class="four-card__item card">
+                    <div class="card-line"></div>
+                    <div class="card-body">
+                        <h3 class="card-name">Calculator</h3>
+                        <p class="card-desc">Uses data from past projects to provide better delivery estimates</p>
+                    </div>
+                    <img src="./img/laptop.svg" alt="Laptop icon" class="four-card__icon">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- FOUR-CARD -->
+
 </body>
+
 </html>
