--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="four-card__headline">
                 <p class="four-card__subtitle">Reliable, efficient delivery</p>
                 <h1 class="four-card__title">Powered by Technology</h1>
-                <p class="fout-card__text">Our Artificial Intelligence powered tools use millions of project data points
+                <p class="four-card__text">Our Artificial Intelligence powered tools use millions of project data points
                     to ensure that your project is successful</p>
             </div>
             <div class="four-card__main">
@@ -29,7 +29,7 @@
                     </div>
                     <img src="./img/search.svg" alt="Search icon" class="four-card__icon">
                 </div>
-                <div class="fout-card__content">
+                <div class="four-card__content">
                     <div class="four-card__item card">
                         <div class="card-line"></div>
                         <div class="card-body">
